Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 10.3.5
-
Fix Version/s: 10.3.5
-
Component/s: Storage Engine - InnoDB
-
Labels:
-
Epic Link:
Description
The last commit of MDEV-15104 apparently causes intermittent corruption of the purge_sys->view, allowing old versions of records to be purged prematurely.
Attachments
Issue Links
- causes
-
MDEV-22680 InnoDB trx_sys improvements
-
- Open
-
- is caused by
-
MDEV-15104 Remove trx_sys_t::rw_trx_ids and trx_sys_t::serialisation_list
-
- Closed
-